--- a/amplify.yml
+++ b/amplify.yml
@@ -3,8 +3,8 @@ backend:
   phases:
     build:
       commands:
-        - npm install
-        - npx ampx pipeline-deploy --branch $AWS_BRANCH --app-id $AWS_APP_ID
+        - cd amplify && npm install
+        - cd amplify && npx ampx pipeline-deploy --branch $AWS_BRANCH --app-id $AWS_APP_ID --outputs-out-dir ..
 frontend:
   phases:
     preBuild:
