--- a/amplify.yml
+++ b/amplify.yml
@@ -3,8 +3,12 @@ backend:
   phases:
     build:
       commands:
-        - cd amplify && npm install
-        - cd amplify && npx ampx pipeline-deploy --branch $AWS_BRANCH --app-id $AWS_APP_ID --outputs-out-dir ..
+        - npm install
+        - |
+          if [ -d "amplify" ]; then
+            cd amplify && npm install
+          fi
+        - npx ampx pipeline-deploy --branch $AWS_BRANCH --app-id $AWS_APP_ID --outputs-out-dir .
 frontend:
   phases:
     preBuild:
