--- a/amplify.yml
+++ b/amplify.yml
@@ -3,12 +3,8 @@ backend:
   phases:
     build:
       commands:
-        - npm install
-        - |
-          if [ -d "amplify" ]; then
-            cd amplify && npm install
-          fi
-        - npx ampx pipeline-deploy --branch $AWS_BRANCH --app-id $AWS_APP_ID --outputs-out-dir .
+        - cd ci
+        - npx ampx pipeline-deploy --branch $AWS_BRANCH --app-id $AWS_APP_ID
 frontend:
   phases:
     preBuild:
